test/tests/compiler/16_characters_and_strings/invalid_lex/newline.plx
s: *char = "hello
    world "

pub fn main(none) i32 {
    return 0
}
